changed colours and red for >100
continuation line and tooltip

--- a/inst/html-templates/css-template.css
+++ b/inst/html-templates/css-template.css
@@ -87,7 +87,7 @@ position: relative;
 }
 
 #tooltip {
-background: cornsilk;
+background: #f0efe9;
 border: 1px solid black;
 border-radius: 5px;
 padding: 5px;
